<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/agreement_age_policy"
		android:id="@+id/textView_agepolicy"
		android:textStyle="bold"/>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="2">

		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/agreement_decline"
			android:id="@+id/btn_decline"
			android:layout_weight="1"/>

		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/agreement_agree"
			android:id="@+id/btn_agree"
			android:layout_weight="1"/>
	</LinearLayout>
</LinearLayout>