<?xml version="1.0" encoding="utf-8"?>
<jp.co.cybird.android.utils.CustomRelativeLayout android:id="@+id/layout_base"
												 xmlns:android="http://schemas.android.com/apk/res/android"
												 android:layout_width="match_parent"
												 android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/action_area"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/dialog_action_area"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_marginRight="@dimen/dialog_padding_around_button"
		android:orientation="horizontal"
		android:visibility="gone">

		<Button
			android:id="@+id/dialog_negative_button"
			android:layout_width="wrap_content"
			android:layout_height="@dimen/dialog_button_height"
			android:layout_marginRight="@dimen/dialog_padding_around_button"
			android:text="@string/age_conf_cancel"/>

		<Button
			android:id="@+id/dialog_positive_button"
			android:layout_width="wrap_content"
			android:layout_height="@dimen/dialog_button_height"
			android:text="@string/age_conf_confirmation"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearlayout_base"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/action_area"
		android:layout_marginTop="@dimen/dialog_padding_bet_title_body"
		android:orientation="vertical">

		<TextView
			android:id="@+id/age_conf_text1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:layout_marginBottom="@dimen/dialog_padding_bet_title_body"
			android:layout_marginTop="@dimen/dialog_padding_bet_title_body"
			android:text="@string/age_conf_text1"
			android:textSize="@dimen/dialog_default_text_size"/>

		<LinearLayout
			android:id="@+id/main_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="@dimen/dialog_padding_around_content_area"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/age_conf_a_d"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/age_conf_a_d"/>

			<Spinner
				android:id="@+id/age_conf_year_spinner"
				android:layout_width="@dimen/dialog_spinner_width_year"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				></Spinner>

			<TextView
				android:id="@+id/age_conf_year"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/age_conf_year"/>

			<!-- 生まれ月 -->
			<Spinner
				android:id="@+id/age_conf_month_spinner"
				android:layout_width="@dimen/dialog_spinner_width_month"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"></Spinner>

			<TextView
				android:id="@+id/age_conf_month"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/age_conf_month"/>
		</LinearLayout>

		<TextView
			android:id="@+id/age_conf_text_error"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:layout_marginBottom="@dimen/dialog_padding_around_content_area"
			android:layout_marginTop="@dimen/dialog_padding_around_button"
			android:text="@string/age_conf_error01"
			android:textColor="#ff0000"
			android:textSize="@dimen/dialog_default_text_size"
			android:visibility="invisible"/>
	</LinearLayout>
</jp.co.cybird.android.utils.CustomRelativeLayout>