<jp.co.cybird.android.utils.CustomRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/layout_base" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/action_area">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearlayout_base"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dialog_padding_bet_title_body">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/age_regist_text2"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/dialog_default_text_size"
                    android:text="@string/age_regist_text2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/age_regist_text3"
                    android:textColor="#ff0000"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="@dimen/dialog_padding_bet_title_body"
                    android:textSize="@dimen/dialog_default_text_size"
                    android:text="@string/age_regist_text3"/>
            </LinearLayout>
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dialog_padding_around_content_area"
                android:id="@+id/arg_regist_table_layout"
                android:layout_gravity="center_horizontal">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/age_regist_birth_year_month_text"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/dialog_large_text_size"
                        android:text="@string/age_regist_birth_year_month_text"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/age_regist_birth_year_month"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/dialog_large_text_size"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/age_regist_age_text"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/dialog_large_text_size"
                        android:text="@string/age_regist_age_text"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/age_regist_age"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/dialog_large_text_size"/>
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age_regist_text4"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/dialog_padding_bet_title_body"
                android:layout_gravity="center_horizontal"
                android:text="@string/age_regist_text4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/age_regist_text_error"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/dialog_padding_around_button"
                android:layout_marginBottom="@dimen/dialog_padding_around_content_area"
                android:textColor="#ff0000"
                android:textSize="@dimen/dialog_default_text_size"
                android:visibility="invisible"
                android:text="@string/age_conf_error02"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/action_area"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_action_area"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dialog_padding_around_button"
        android:visibility="gone">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:id="@+id/dialog_negative_button"
            android:layout_marginRight="@dimen/dialog_padding_around_button"
            android:text="@string/age_conf_cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:id="@+id/dialog_positive_button"
            android:text="@string/age_regist_registration"/>
    </LinearLayout>

</jp.co.cybird.android.utils.CustomRelativeLayout>
